@startuml
hide members
skinparam linetype ortho
together {
  interface Block
  interface Block_Implementation as "Block::Implementation"
}
together {
  class BaseBlock
  class BaseBlock_Implementation as "BaseBlock::Implementation"
}
Block o-- Block_Implementation
Block ..> Block_Implementation
BaseBlock *---- BaseBlock_Implementation
BaseBlock ....> BaseBlock_Implementation
BaseBlock ..|> Block
Block_Implementation <|-- BaseBlock_Implementation
@enduml
